# bandcamp

./: Cargo.toml  README.md  codegen.py
.github/workflows/: CI.yml
python_bindings/: Cargo.toml  pyproject.toml
python_bindings/bandcamp/: __init__.py  __init__.pyi
python_bindings/bandcamp_lib/: bandcamp_lib.pyi
python_bindings/src/: lib.rs
src/: album.rs  artist.rs  error.rs  lib.rs  search.rs  util.rs
