[package]
name = "bandcamp"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/fabi321/bandcamp"

[dependencies]
curl = "0.4"
snafu = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
lazy_static = "1"
url = "2"
