[package]
name = "bandcamp_lib"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bandcamp_lib"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26.0", features = ["extension-module"]}
pyo3-async-runtimes = { version = "0.26", features = ["tokio-runtime"] }
bandcamp = { version = "0.2.0", path = "..", features = ["pyo3"] }
